--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="card">
+        <h2 class="heading">WEATHER APP</h2>
         <div class="search">
             <input type="text" placeholder="Enter City Name" spellcheck="false">
             <button><img src="./assets/search.png"></button>
